# civicmind-ai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.microservices.yml  docker-compose.yml  requirements.txt  server.py  setup.py
civicmind/: __init__.py  config.py
civicmind/agents/: base_agent.py  parking_agent.py  permits_agent.py
civicmind/core/: agent_factory.py  civic_orchestrator.py
docs/: agent-development.md  api-reference.md  architecture-diagrams.md  architecture.md  branding-guide.md  commercial-architecture.md  deployment.md  examples.md  integrations.md  mcp-integration.md  quickstart.md  troubleshooting.md
docs/examples/: building-an-agent.md  custom-service.md  orchestration.md
docs/for-companies/: technical-architecture.md
independent-services/civicmind-api-gateway/: main.py
independent-services/civicmind-business-mcp-server/src/business_mcp_server/: server.py
independent-services/civicmind-parking-mcp-server/: README.md  pyproject.toml
independent-services/civicmind-parking-mcp-server/src/parking_mcp_server/: __init__.py  server.py
independent-services/civicmind-parking-mcp-server/src/parking_mcp_server/agents/: __init__.py  parking_agent.py
independent-services/civicmind-parking-mcp-server/src/parking_mcp_server/tools/: __init__.py  parking_tools.py
independent-services/civicmind-parking-service/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  setup.py
independent-services/civicmind-parking-service/tests/: conftest.py  test_api.py
scripts/: demo_multi_repo_architecture.py  generate_remaining_services.py  generate_services.py  validate_architecture.py
shared-lib/: README.md  requirements.txt  setup.py
shared-lib/civicmind_common/: __init__.py
shared-lib/civicmind_common/models/: __init__.py  agent_models.py  base_models.py
shared-lib/civicmind_common/utils/: health_checks.py  logging.py
(+18 files in other folders)
