[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civicmind-parking-mcp-server"
version = "1.0.0"
description = "CivicMind Parking MCP Server - AI agent for parking issues"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CivicMind AI Team", email = "team@civicmind.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Government",
    "Topic :: Government :: Civic Services",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "asyncio-mqtt>=0.13.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.26.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/civicmind-ai/civicmind-parking-mcp-server"
Repository = "https://github.com/civicmind-ai/civicmind-parking-mcp-server"
Issues = "https://github.com/civicmind-ai/civicmind-parking-mcp-server/issues"

[project.scripts]
parking-mcp-server = "parking_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 79
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
